--- a/packages/camera/camera/pubspec.yaml
+++ b/packages/camera/camera/pubspec.yaml
@@ -21,8 +21,16 @@ flutter:
         default_package: camera_web
 
 dependencies:
-  camera_android: ^0.10.1
-  camera_avfoundation: ^0.9.9
+  camera_android:
+    git:
+      url: https://github.com/vnpage/flutter-plugins.git
+      ref: camera_linkid_ekyc
+      path: packages/camera/camera_android
+  camera_avfoundation:
+    git:
+      url: https://github.com/vnpage/flutter-plugins.git
+      ref: camera_linkid_ekyc
+      path: packages/camera/camera_avfoundation
   camera_platform_interface: ^2.3.2
   camera_web: ^0.3.1
   flutter:
